--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,17 +3,70 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}{% endblock %} - Kveo</title>
+
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/app.css') }}">
             <link rel="stylesheet" href="{{ asset('assets/vendor/font-awesome/css/font-awesome.min.css') }}">
         {% endblock %}
+
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block header %}
+            <header id="header">
+                <div id="headerLogo" class="container">
+                    <a href="#"><i class="logo fa fa-television fa-4x pull-left">kveo</i></a>
+                    <div class="search-box col-md-3">
+                        <form action="#" class="navbar-form">
+                            <div class="input-group">
+                                <input type="Search" placeholder="Buscar..." class="form-control" />
+                                <div class="input-group-btn">
+                                    <button class="logo btn btn-default">
+                                        <span class="logo fa fa-search"></span>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="user-profile pull-right">
+                    </div>
+                </div>
+                <nav class="productMenu navbar navbar-default no-margin" >
+                    <div class="navbar-header fixed-brand">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                data-target=".sub">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="sub collapse navbar-collapse col-md-11">
+                        <ul class="nav navbar-nav">
+                            <li class="mainNav tab-movies col-md-2 "><a href="#">Peliculas</a></li>
+                            <li class="mainNav tab-movies col-md-2 "><a href="#">Series</a></li>
+                            <li class="mainNav tab-movies col-md-2 "><a href="#">Documentales</a></li>
+                            <li class="mainNav tab-movies col-md-2 "><a href="#">Programas</a></li>
+                            <li class="mainNav tab-movies col-md-2 "><a href="#">Tendencias</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+        {% endblock %}
+
+        <div class="wrap">
+            {% block body %}{% endblock %}
+        </div>
+
         {% block javascripts %}
             <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js')  }}"></script>
             <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js')  }}"></script>
+            <script src="{{ asset('js/app.js') }}"></script>
         {% endblock %}
     </body>
+
+    <div id="footer" class="navbar-default">
+        <div class="container-fluid"></div>
+    </div>
 </html>
