--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}{% endblock %} - Kveo</title>
+        <title>kveo | {% block title %}{% endblock %}</title>
 
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
@@ -16,7 +16,7 @@
         {% block header %}
             <header id="header">
                 <div id="headerLogo" class="container">
-                    <a href="#"><i class="logo fa fa-television fa-4x pull-left">kveo</i></a>
+                    <a href="{{ path('home') }}"><i class="logo fa fa-television fa-4x pull-left">kveo</i></a>
                     <div class="search-box col-md-3">
                         <form action="#" class="navbar-form">
                             <div class="input-group">
@@ -44,11 +44,21 @@
                     </div>
                     <div class="sub collapse navbar-collapse col-md-11">
                         <ul class="nav navbar-nav">
-                            <li class="mainNav tab-movies col-md-2 "><a href="#">Peliculas</a></li>
-                            <li class="mainNav tab-movies col-md-2 "><a href="#">Series</a></li>
-                            <li class="mainNav tab-movies col-md-2 "><a href="#">Documentales</a></li>
-                            <li class="mainNav tab-movies col-md-2 "><a href="#">Programas</a></li>
-                            <li class="mainNav tab-movies col-md-2 "><a href="#">Tendencias</a></li>
+                            <li class="mainNav tab-movies col-md-2 ">
+                                <a href="{{ path('catalog', { 'mediaType':2 }) }}">Peliculas</a>
+                            </li>
+                            <li class="mainNav tab-movies col-md-2 ">
+                                <a href="{{ path('catalog', { 'mediaType':3 }) }}">Series</a>
+                            </li>
+                            <li class="mainNav tab-movies col-md-2 ">
+                                <a href="{{ path('catalog', { 'mediaType':1 }) }}">Documentales</a>
+                            </li>
+                            <li class="mainNav tab-movies col-md-2 ">
+                                <a href="{{ path('catalog', { 'mediaType':4 }) }}">Programas</a>
+                            </li>
+                            <li class="mainNav tab-movies col-md-2 ">
+                                <a href="#">Tendencias</a>
+                            </li>
                         </ul>
                     </div>
                 </nav>
@@ -56,7 +66,13 @@
         {% endblock %}
 
         <div class="wrap">
-            {% block body %}{% endblock %}
+            {% block body %}
+                {% for flash_message in app.session.flashbag.get('notice') %}
+                    <div class="flash-notice alert alert-danger">
+                        {{ flash_message }}
+                    </div>
+                {% endfor %}
+            {% endblock %}
         </div>
 
         {% block javascripts %}
