--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {% endblock %}
+{% block title %} {{ 'index.title'|trans }}{% endblock %}
 
 {% block body %}
     {{ parent() }}
