--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -4,7 +4,10 @@
 
 {% block body %}
     {{ parent() }}
-        <div class="media-grid container-fluid">
+
+    {% include 'includes/carousel.html.twig' %}
+
+    <div class="media-grid container-fluid">
             {% for medias in media %}
                 <div class="media-container">
                     <div class="media-card">
