--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>kveo | {% block title %}{% endblock %}</title>
+<head>
+    <meta charset="UTF-8" />
+    <title>kveo | {% block title %}{% endblock %}</title>
 
-        {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
-            <link rel="stylesheet" href="{{ asset('css/app.css') }}">
-            <link rel="stylesheet" href="{{ asset('assets/vendor/font-awesome/css/font-awesome.min.css') }}">
-        {% endblock %}
+    {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/vendor/font-awesome/css/font-awesome.min.css') }}">
+    {% endblock %}
 
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+</head>
 
-    <body>
-        {% block header %} {% endblock %}
+<body>
+{% block header %} {% endblock %}
 
-        <div class="wrap">
-            {% block body %}{% endblock %}
-        </div>
+<div class="wrap">
+    {% block body %}{% endblock %}
+</div>
 
-        {% block javascripts %}
-            <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js')  }}"></script>
-            <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js')  }}"></script>
-            <script src="{{ asset('js/app.js') }}"></script>
-        {% endblock %}
-    </body>
+{% block javascripts %}
+    <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js')  }}"></script>
+    <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js')  }}"></script>
+    <script src="{{ asset('js/jquery.instantSearch.js') }}"></script>
+    <script src="{{ asset('js/app.js') }}"></script>
 
-    {% block footer %}{% endblock %}
+    <script>
+        $(function() {
+            $('.search-bar input[name="q"]').instantSearch({
+                noItemsFoundMessage: '{{ 'media.no_posts_found'|trans }}'
+            });
+        });
+    </script>
+{% endblock %}
+</body>
+
+{% block footer %}{% endblock %}
 </html>
