--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,12 +24,14 @@
     <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js')  }}"></script>
     <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js')  }}"></script>
     <script src="{{ asset('js/jquery.instantSearch.js') }}"></script>
+    <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+    <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
     <script src="{{ asset('js/app.js') }}"></script>
 
     <script>
         $(function() {
             $('.search-bar input[name="q"]').instantSearch({
-                noItemsFoundMessage: '{{ 'media.no_posts_found'|trans }}'
+                noItemsFoundMessage: '{{ 'post.no_posts_found'|trans }}'
             });
         });
     </script>
