--- a/app/Resources/views/comment/newComment.html.twig
+++ b/app/Resources/views/comment/newComment.html.twig
@@ -1,5 +1,6 @@
-{{ form_start(form, {method: 'POST', action: path('create_comment', {'media': media.id }) }) }}
+<form method="POST" id="commentForm" action="{{path('create_comment', {'media': media.id})}}">
     {{ form_row(form.comment) }}
-<button type="submit" class="btn btn-xs btn-danger">{{ 'btn.send' |trans }}</button>
-{{ form_end(form) }}
+    {{form_rest(form)}}
+    <button type="submit" id="submitButton" class="btn btn-xs btn-danger">{{ 'btn.send' |trans }}</button>
+</form>
 
