--- a/app/Resources/views/media/media.html.twig
+++ b/app/Resources/views/media/media.html.twig
@@ -55,6 +55,18 @@
                         <i class="fa fa-user fa-2x"></i>
                         {{ comments.user }}
                         {{ comments.publishedAt|date('d-m-Y H:i') }}
+                        <a href="{{ path('comment_edit', { 'id':comments.id, 'media': selected.id })  }}"
+                           class="btn btn-xs btn-default">
+                            <i class="fa fa-pencil"></i>
+                        </a>
+                        {%  if comments.editedAt is not null %}
+                            <div id="commentEdited">
+                                <span class="commentEdited label label-default">
+                                   {{ 'label.edited' |trans }} {{ comments.editedAt|date('d-m-Y H:i') }}
+                                </span>
+                            </div>
+                        {% endif %}
+
                         <div class="comment-content">
                             {{ comments.comment }}
                         </div>
