--- a/web/css/app.css
+++ b/web/css/app.css
@@ -169,6 +169,7 @@ a {
 
 .comment-content {
     margin-top: 10px;
+    margin-bottom: 10px;
     color: #9f9fa3;
 }
 
@@ -215,6 +216,8 @@ a {
 
 .profile-title {
     text-align: center;
+    font-size: 16px;
+    margin-bottom: 10px;
 }
 
 #user_reset_password_text {
@@ -231,5 +234,34 @@ a {
 
 /* comments */
 .comment-input {
+    margin-bottom: 15px;
+}
+
+.content{
+    background-color: white;
+    padding-left: 15px;
+    border-radius: 4px;
+    border:1px solid #CCCCCC;
+    padding: 10px;
+}
+
+.profile-title {
+    background-color: #bf0000;
+    color: #e3dee2;
+    font-size: 18px;
+}
+
+.form-group textarea {
+    height: 140px;
     resize: none;
+}
+
+.general-comment {
+    border-radius: 5px;
+    background-color: white;
+}
+
+#image-comment {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
