--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -26,17 +26,21 @@
                 <button class="btn btn-lg btn-danger btn-block" type="submit">{{ 'security.login.submit'|trans }}</button>
                 <a id="forgot_password" href="{{ path('fos_user_resetting_request')  }}">
                     {{ 'forgot_password.user'|trans }}</a>
+                <br>
+                <label class="register-btn btn btn-danger btn-block">
+                    <a id="user_register" href="{{ path('fos_user_registration_register')  }}">
+                        {{ 'registration.register'|trans }}</a>
+                </label>
             </form>
         </div>
 
         {% if error %}
-            <div id="loginError" class="alert alert-info alert-dismissible" role="alert">
+            <div id="login-Error" class="alert alert-danger alert-dismissible col-md-4 col-md-offset-4" role="alert">
                 <button type="button" class="close" data-dismiss="alert"
                         aria-label="Close"><span aria-hidden="true">&times;</span>
                 </button>
                 {{ error.messageKey|trans(error.messageData, 'security') }}
             </div>
         {% endif %}
-
     </div>
 {% endblock %}
