--- a/web/css/app.css
+++ b/web/css/app.css
@@ -313,3 +313,14 @@ ul li {
     margin-top: 15px;
     background-color: #ffffff;
 }
+
+/* gravatar */
+.avatar {
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+}
+
+.gravatar-link{
+    margin-top: 15px;
+}
