Gravatar image in user comments

--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -12,7 +12,7 @@
             <img class="avatar" src="{{ gravatar(app.user.email, 150) }}" />
             <div class="gravatar-link">
                 {{ 'profile.gravatar_link'|trans({}, 'messages') }}
-                <a href="https://es.gravatar.com/" target="_blank">Gravatar</a>
+                <a href="https://es.gravatar.com/" target="_blank"><strong>Gravatar</strong></a>
             </div>
         </div>
         <div class="profile-form-edit col-md-7">
