--- a/app/Resources/views/media/media.html.twig
+++ b/app/Resources/views/media/media.html.twig
@@ -52,7 +52,9 @@
                 </div>
                 {% for comments in comment %}
                     <div class="comment-text">
-                        <i class="fa fa-user fa-2x"></i>
+                        <div class="gravatar col-md-1">
+                            <img class="avatar" src="{{ gravatar(comments.user.email) }}" />
+                        </div>
                         {{ comments.user }}
                         {{ comments.publishedAt|date('d-m-Y H:i') }}
                         {% if is_granted('EDIT', comments) %}
@@ -73,7 +75,7 @@
                             </div>
                         {% endif %}
 
-                        <div class="comment-content">
+                        <div class="comment-content col-md-offset-1">
                             {{ comments.comment }}
                         </div>
                         <hr>
