--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -16,7 +16,10 @@
                     <img class="avatar" src="{{ gravatar(app.user.email, 35) }}" /></i> {{ app.user.username }}
                 </button>
                 <ul class="c dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <li><a href="{{ path('fos_user_profile_show') }}"><i class="fa fa-cog"></i>{{ 'user.profile'|trans }}</a></li>
+                    {% if is_granted("ROLE_SUPER_ADMIN") %}
+                        <li><a href="{{ path('easyadmin') }}"><i class="fa fa-suitcase"></i>{{ 'admin.cpanel'|trans }}</a></li>
+                    {% endif %}
+                    <li><a href="{{ path('fos_user_profile_show') }}"><i class="fa fa-cog fa-spin"></i>{{ 'user.profile'|trans }}</a></li>
                     <li><a href="{{ path('fos_user_security_logout') }}"> <i class="fa fa-sign-out"></i>{{ 'user.logout'|trans }}</a></li>
                 </ul>
             </div>
