Updated image field in app

--- a/app/Resources/views/comment/editComment.html.twig
+++ b/app/Resources/views/comment/editComment.html.twig
@@ -8,7 +8,7 @@
     </div>
     <div class="general-comment container col-md-10 col-md-offset-1">
             <div class="comment-image col-md-2 text-center">
-                <img id="image-comment"  src="{{ asset('/images/' ~ comment.media.img) | imagine_filter('media') }}">
+                <img id="image-comment"  src="{{ asset('/images/' ~ comment.media.image) | imagine_filter('media') }}">
             </div>
 
         <div class="comment-content container col-md-10">
