--- a/app/Resources/views/person/personShow.html.twig
+++ b/app/Resources/views/person/personShow.html.twig
@@ -25,7 +25,7 @@
                 <div class="media-container">
                     <div class="media-card">
                         <a href="{{ path("media", {'slug':person.slug}) }}">
-                            <img src="{{ asset('/images/' ~ person.img) | imagine_filter('filmography') }}">
+                            <img src="{{ asset('/images/' ~ person.image) | imagine_filter('filmography') }}">
                         </a>
                     </div>
                     <div class="media-info">
