--- a/app/Resources/views/collection/collectionShow.html.twig
+++ b/app/Resources/views/collection/collectionShow.html.twig
@@ -9,7 +9,7 @@
             <div class="media-container">
                 <div class="media-card">
                     <a href="{{ path("media", {'slug':collection.slug}) }}">
-                        <img src="{{ asset('/images/' ~ collection.img) | imagine_filter('media') }}">
+                        <img src="{{ asset('/images/' ~ collection.image) | imagine_filter('media') }}">
                     </a>
                 </div>
                 <div class="media-info">
