--- a/app/Resources/views/includes/carousel.html.twig
+++ b/app/Resources/views/includes/carousel.html.twig
@@ -1,8 +1,8 @@
-<div id="carousel" class="carousel slide" data-ride="carousel">
+<div id="carousel" class="carousel slide visible-lg" data-ride="carousel">
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="{{ asset('/images/deadPool.jpg'| imagine_filter('bannerw') ) }}">
+            <img src="{{ asset('/images/kveo-fringe.jpg'| imagine_filter('bannerw') ) }}">
         </div>
         <div class="item">
             <img src="{{ asset('/images/kveo-fringe.jpg'| imagine_filter('bannerw') ) }}">
