--- a/web/css/app.css
+++ b/web/css/app.css
@@ -26,6 +26,7 @@ ul li {
     flex: 1;
     padding-bottom: 10px;
     background-image: url("/images/background-image.jpg");
+    padding-top: 120px;
 }
 
 
@@ -33,9 +34,14 @@ ul li {
     margin: 0;
 }
 
+.nav-product {
+    background-color: #414141;
+}
+
 /* glyphicon*/
 .logo {
     color: #e3dee2;
+    margin-left: 30px;
 }
 
 /* .navbar */
