--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -14,7 +14,5 @@
 
 
 {% block footer %}
-    <div id="footer" class="navbar-default">
-        <div class="container-fluid"></div>
-    </div>
+    {% include 'includes/footer.html.twig' %}
 {% endblock %}
