--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -22,7 +22,7 @@
                 </div>
             </div>
         {% endfor %}
-        <div class="paginator">
+        <div class="paginator col-md-12">
             {{ knp_pagination_render(medias) }}
         </div>
     </div>
