--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -5,6 +5,6 @@
     <div class="footer-links">
         <i class="fa fa-hand-spock-o col-md-3 col-xs-10"> {{ 'footer.created_by'|trans }}</i>
         <a href="https://github.com/n0ni0" target="_blank"><i class="fa fa-github col-md-2 col-xs-8"> Github</i></a>
-        <a href="https://github.com/n0ni0"><i class="fa fa-send col-md-2 col-xs-8"> Contacto</i></a>
+        <a href="{{ path('contact_form') }}"><i class="fa fa-send col-md-2 col-xs-8"> {{ 'contact'|trans }}</i></a>
     </div>
 </div>
